--- a/praktikum/dorsch/src/react_native/EzOrder/package.json
+++ b/praktikum/dorsch/src/react_native/EzOrder/package.json
@@ -10,12 +10,17 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-community/checkbox": "^0.5.12",
     "expo": "~45.0.0",
     "expo-status-bar": "~1.3.0",
+    "numericinput": "^1.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
-    "react-native-web": "0.17.7"
+    "react-native-datepicker": "^1.7.2",
+    "react-native-numeric-input": "^1.9.1",
+    "react-native-web": "0.17.7",
+    "expo-checkbox": "~2.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
