--- a/praktikum/shipilov/Microservices/Play.Identity/kubernetes/identity.yaml
+++ b/praktikum/shipilov/Microservices/Play.Identity/kubernetes/identity.yaml
@@ -13,7 +13,7 @@ spec:
     spec:
       containers:
         - name: identity
-          image: playeconomy.azurecr.io/play.identity:1.0.4
+          image: shopeconomy.azurecr.io/play.identity:1.0.5
           env:
             - name: ServiceSettings__MessageBroker
               value: SERVICEBUS
@@ -38,3 +38,16 @@ spec:
               cpu: "150m"
           ports:
             - containerPort: 5002
+
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: identity-service
+spec:
+  type: LoadBalancer
+  selector:
+    app: identity
+  ports:
+    - port: 80
+      targetPort: 5002
