--- a/praktikum/shipilov/Microservices/Play.Identity/kubernetes/identity2.yaml
+++ b/praktikum/shipilov/Microservices/Play.Identity/kubernetes/identity2.yaml
@@ -38,6 +38,16 @@ spec:
               cpu: "150m"
           ports:
             - containerPort: 5002
+          livenessProbe:
+            httpGet:
+              path: /health/live
+              port: 5002
+            initialDelaySeconds: 10
+          readinessProbe:
+            httpGet:
+              path: /health/ready
+              port: 5002
+            initialDelaySeconds: 10
 
 ---
 apiVersion: v1
