api-gateway / running in Azure Portal with Kubernetes.
installing the api-gateway and running the microservices in the Azure Portal with Kubernetes.

--- a/praktikum/shipilov/Microservices/Play.Identity/kubernetes/identity.yaml
+++ b/praktikum/shipilov/Microservices/Play.Identity/kubernetes/identity.yaml
@@ -10,28 +10,18 @@ spec:
     metadata:
       labels:
         app: identity
+        aadpodidbinding: identity
     spec:
       containers:
         - name: identity
-          image: shopeconomy.azurecr.io/play.identity:1.0.7
+          image: shopeconomy.azurecr.io/play.identity:1.0.10
           env:
             - name: ServiceSettings__MessageBroker
               value: SERVICEBUS
-            - name: MongoDbSettings__ConnectionString
-              valueFrom:
-                secretKeyRef:
-                  name: identity-secrets
-                  key: cosmosdb-connectionstring
-            - name: ServiceBusSettings__ConnectionString
-              valueFrom:
-                secretKeyRef:
-                  name: identity-secrets
-                  key: servicebus-connectionstring
-            - name: IdentitySettings__AdminUserPassword
-              valueFrom:
-                secretKeyRef:
-                  name: identity-secrets
-                  key: admin-password
+            - name: ServiceSettings__KeyVaultName
+              value: shopeconomy
+            - name: IdentitySettings__PathBase
+              value: /identity-svc
           resources:
             limits:
               memory: "128Mi"
@@ -45,7 +35,7 @@ kind: Service
 metadata:
   name: identity-service
 spec:
-  type: LoadBalancer
+  type: ClusterIP
   selector:
     app: identity
   ports:
