--- a/praktikum/shipilov/Microservices/Play.Identity/kubernetes/identity.yaml
+++ b/praktikum/shipilov/Microservices/Play.Identity/kubernetes/identity.yaml
@@ -10,24 +10,40 @@ spec:
     metadata:
       labels:
         app: identity
-        aadpodidbinding: identity
+        aadpodidbinding: identity # name in Azure ressource group
     spec:
       containers:
         - name: identity
-          image: shopeconomy.azurecr.io/play.identity:1.0.10
+          image: shopeconomy.azurecr.io/play.identity:1.0.12
           env:
-            - name: ServiceSettings__MessageBroker
+            - name: ServiceSettings__MessageBroker # Common.Settings
               value: SERVICEBUS
             - name: ServiceSettings__KeyVaultName
               value: shopeconomy
-            - name: IdentitySettings__PathBase
+            - name: IdentitySettings__PathBase # Play.Identity.Service.Settings
               value: /identity-svc
+            - name: IdentitySettings__CertificateCerFilePath
+              value: "/certificates/certificate.crt" # same as "volumeMounts/mountPath" / "volumes/items" in this file
+            - name: IdentitySettings__CertificateKeyFilePath
+              value: "/certificates/certificate.key" # same as "volumeMounts/mountPath" / "volumes/items" in this file
           resources:
             limits:
               memory: "128Mi"
               cpu: "150m"
           ports:
-            - containerPort: 5002
+            - containerPort: 5002 # same as in Dockerfile
+          volumeMounts:
+            - name: certificate-volume # from signin-cer.yaml
+              mountPath: /certificates
+      volumes:
+        - name: certificate-volume
+          secret:
+            secretName: signing-cert # from signin-cer.yaml
+            items:
+              - key: tls.key
+                path: certificate.key
+              - key: tls.crt
+                path: certificate.crt
 
 ---
 apiVersion: v1
@@ -40,4 +56,4 @@ spec:
     app: identity
   ports:
     - port: 80
-      targetPort: 5002
+      targetPort: 5002 # same as in Dockerfile
