Frontend changes for deploying in Kubernetes

--- a/praktikum/shipilov/Microservices/Frontend/public/manifest.json
+++ b/praktikum/shipilov/Microservices/Frontend/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Play Economy",
-  "name": "Play Economy",
+  "short_name": "SchüCal Economy",
+  "name": "SchüCal Economy",
   "icons": [
     {
       "src": "favicon.ico",
