--- a/praktikum/dorsch/src/react_native/EzOrder/package.json
+++ b/praktikum/dorsch/src/react_native/EzOrder/package.json
@@ -12,18 +12,22 @@
   "dependencies": {
     "@react-native-community/checkbox": "^0.5.12",
     "expo": "~45.0.0",
+    "expo-checkbox": "~2.1.0",
     "expo-status-bar": "~1.3.0",
     "numericinput": "^1.0.1",
+    "querystring": "^0.2.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
     "react-native-datepicker": "^1.7.2",
     "react-native-numeric-input": "^1.9.1",
     "react-native-web": "0.17.7",
-    "expo-checkbox": "~2.1.0"
+    "superagent": "^7.1.6",
+    "expo-updates": "~0.13.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.12.9",
+    "@types/node": "^18.0.0"
   },
   "private": true
 }
